--- a/NumbersEx/NumbersEx.csproj
+++ b/NumbersEx/NumbersEx.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="4PrimeFact.cs" />
+    <Compile Include="5GetNextPrime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
