--- a/NumbersEx/NumbersEx.csproj
+++ b/NumbersEx/NumbersEx.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="7MortgageCalc.cs" />
+    <Compile Include="8ChangeReturn.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
