Completed Basic Calculator

--- a/NumbersEx/NumbersEx.csproj
+++ b/NumbersEx/NumbersEx.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="9BinDecConverter.cs">
+    <Compile Include="10Calculator.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
