Finished Unit Converstions, could add more in the future, missing Mass and error checking.

--- a/NumbersEx/NumbersEx.csproj
+++ b/NumbersEx/NumbersEx.csproj
@@ -43,9 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="10Calculator.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="11UnitConvertor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
