--- a/NumbersEx/NumbersEx.csproj
+++ b/NumbersEx/NumbersEx.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="11UnitConvertor.cs">
+    <Compile Include="12AlarmClock.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
